# AE_LIW_automation

./: .gitignore  AE_LIW_automation.ipynb  pyproject.toml  requirements.txt  slide6.ipynb
resources/: 9751 Low Income Weatherization FY24Q3.sav
src/AE_LIW_automation/: dataframe_presentation.pptx  main.py  slide_1.ipynb  styled_table_presentation.pptx
src/AE_LIW_automation/config/: constants.py
src/AE_LIW_automation/helper_modules/: __init__.py  combine_multiple_questions.py  format_paragraph_xml.py  get_chart_categories.py  get_chart_object.py  get_chart_object_by_name.py  get_chart_series_data.py  get_data_blob_from_chart.py  get_table_object.py  get_table_object_incl_old_table_ref.py  get_table_shape_by_name.py  style_table_cell.py  update_paragraphs.py
src/AE_LIW_automation/notebooks/: AE_LIW_automation.ipynb  fix_debugger.ipynb
src/AE_LIW_automation/output/: AE_LIW_Excel_output.xlsx  AE_LIW_updated.pptx  AE_LIW_updated_FY25_Q1.pptx  AE_LIW_updated_FY25_Q3.pptx
src/AE_LIW_automation/resources/: 10100 Low Income Weatherization FY25Q3 Excel output.xlsx  10100 Low Income Weatherization FY25Q3.sav  9751 LIW Report FY2024 Q3 11232024.pptx  9826 LIW FY24 Q4 syntax.sps  9826 LIW Report FY2024 Q4 02122024.pptx  9826 LIW Report FY2024 Q4 working copy.pptx  9826 LIW scratch.xlsx  9826 Low Income Weatherization FY24Q4 Excel output.xlsx  9826 Low Income Weatherization FY24Q4.sav  9930 Low Income Weatherization FY25Q1.sav  9978 LIW Report FY2025 Q2 2025 .pptx  9978 Low Income Weatherization FY25Q2.sav  AE_LIW_syntax.sps
src/ae_liw_automation/: main.py
(+124 files in other folders)
